--- a/html/detailsview/index.html
+++ b/html/detailsview/index.html
@@ -3,30 +3,19 @@
 
 <head>
     <title>Detailsview: WeatherApp for MOOC</title>
-    <style>
-        * {
-            background-color: #45B29D;
-            text-align: center;
-            font-family: sans-serif;
-        }
-        
-        ul {
-            list-style-type: none;
-            text-indent: -2.5em;
-        }
-    </style>
+    <link rel="stylesheet" href="../../css/styles.css" />
 </head>
 
 <body>
 
 
     <!--City-->
-    <div style="color: #FFFFFF;">
+    <div>
         <h1>B E R L I N</h1>
     </div>
 
     <!--Time-->
-    <div style="color: #FFFFFF;">
+    <div>
         <ul>
             <li>12:00 <strong>17&deg;C</strong> 6 km/h <strong style="color: #5DE9FF;">63 %</strong>
             </li>
@@ -39,10 +28,9 @@
         </ul>
     </div>
 
-    <div style="color: #FFFFFF;">
+    <div>
         <!-- This headline leads back to the mainview in another version of the WeatherApp -->
         <h5 style="color: #000000;">Back to mainview</h5>
-		dfgd
     </div>
 </body>
 
